--- a/src/assets/styles/_mixin.scss
+++ b/src/assets/styles/_mixin.scss
@@ -5,7 +5,6 @@
     pointer-events: none;
 }
 @mixin button {
-    
     text-align: center;
     font-family: Source Sans Pro Semibold;
     border-radius: var(--main-border-radius);
@@ -13,6 +12,7 @@
     box-shadow: 0 2px 2px rgba(0, 0, 0, .15);
     outline: none;
     text-align: center;
+    margin-bottom: 5px;
     .button-text {
         padding: var(--main-padding);
     }
@@ -28,7 +28,6 @@
 }
 @mixin button-business {
     min-width:var(--min-width-business);
-    font-size: 16px;
 }
 @mixin button-sonsumer {
     min-width:var(--min-width-consumer);
